--- a/admin/lp-admin.html
+++ b/admin/lp-admin.html
@@ -10,6 +10,7 @@
   <link href="../admin/css/bootstrap.min.css" rel="stylesheet">
   <link href="../admin/css/dashboard.css" rel="stylesheet">
   <link href="../admin/css/admin-style.css" rel="stylesheet">
+  <link href="../admin/css/fileinput.css" rel="stylesheet">
   <!--[if lte IE 9]>
     <script src="../js/html5shiv.min.js"></script>
     <script src="../js/respond.min.js"></script>
@@ -39,17 +40,17 @@
   </nav>
 
 
-  <div class="container-fluid">
+  <div class="container-fluid" id="adminAll">
     <div class="row">
       <!--左侧栏-->
       <div class="col-sm-3 col-md-2 sidebar">
         <ul class="nav nav-sidebar" id="myTab">
-          <li class="active"><a href="#glpx" class="myTab"><span class="glyphicon glyphicon-th-large"></span> 管理品项</a></li>
-          <li><a href="#fbpx" class="myTab"><span class="glyphicon glyphicon-saved"></span> 发布品项</a></li>
-          <li><a href="#xgpx" class="myTab"><span class="glyphicon glyphicon-edit"></span> 修改品项</a></li>
-          <li><a href="#zpq" class="myTab"><span class="glyphicon glyphicon-picture"></span> 管理照片墙</a></li>
-          <li><a href="#fbzp" class="myTab"><span class="glyphicon glyphicon-saved"></span> 发布照片</a></li>
-          <li><a href="#xgzp" class="myTab"><span class="glyphicon glyphicon-edit"></span> 修改照片</a></li>
+          <li class="active" id="glpxTab"><a href="#glpx" class="myTab"><span class="glyphicon glyphicon-th-large"></span> 管理品项</a></li>
+          <li id="fbpxTab"><a href="#fbpx" class="myTab"><span class="glyphicon glyphicon-saved"></span> 发布品项</a></li>
+          <li id="xgpxTab"><a href="#xgpx" class="myTab"><span class="glyphicon glyphicon-edit"></span> 修改品项</a></li>
+          <li id="zpqTab"><a href="#zpq" class="myTab"><span class="glyphicon glyphicon-picture"></span> 管理照片墙</a></li>
+          <li id="fbzpTab"><a href="#fbzp" class="myTab"><span class="glyphicon glyphicon-saved"></span> 发布照片</a></li>
+          <li id="xgzpTab"><a href="#xgzp" class="myTab"><span class="glyphicon glyphicon-edit"></span> 修改照片</a></li>
         </ul>
       </div>
       <!--右侧栏-->
@@ -59,45 +60,31 @@
           <h1 class="page-header">管理品项</h1>
           <form class="form-inline glpx-dropselect form-horizontal">
             <label for="">分类1:</label>
-            <select class="form-control">
-              <option>场地</option>
-              <option>餐饮</option>
+            <select class="form-control" id="lanClass">
+              <option value="1">场地</option>
+              <option value="2">餐饮</option>
             </select>
             <label for="" class="ml20">分类2:</label>
-            <select class="form-control">
-              <option>欧式风格</option>
-              <option>日式风格</option>
-              <option>日式风格</option>
-              <option>日式风格4</option>
-              <option>日式风格5</option>
+            <select class="form-control" id="placeStyleLists">
+              <option value="0" >所有风格</option>
             </select>
             <div class="myTab pull-right">
               <a class="btn btn-primary myTab" href="#fbpx" role="button"><span class="glyphicon glyphicon-saved"></span> 发布新品项</a>
             </div>
           </form>
           <div class="table-responsive">
-            <table class="table table-striped table-hover">
+            <table class="table table-striped table-hover" id="pxgl-lists">
               <thead>
                 <tr>
-                  <th class="col-md-1">#</th>
+                  <th class="col-md-1 text-primary">序号</th>
+                  <th class="col-md-2">品项ID</th>
                   <th class="col-md-1">分类1</th>
                   <th class="col-md-2">分类2</th>
                   <th class="col-md-4">名称</th>
                   <th class="col-md-2">操作</th>
                 </tr>
               </thead>
-              <tbody>
-                <tr>
-                  <td>1</td>
-                  <td>场地</td>
-                  <td>欧式风格</td>
-                  <td>夏威夷轰趴别墅</td>
-                  <td>
-                    <button type="button" class="btn btn-sm btn-warning" data-toggle="modal" data-target="#delete-px">删除</button>
-                    <button type="button" class="btn btn-sm btn-primary myTab" href="#xgpx">修改</button>
-                  </td>
-                </tr>
-              </tbody>
+              <tbody></tbody>
             </table>
           </div>
           <ul class="pagination pull-right">
@@ -113,24 +100,24 @@
         <!--发布品项-->
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main tab-pane fade" id="fbpx">
           <h1 class="page-header">发布品项</h1>
-          <form class="form-inline glpx-dropselect form-horizontal">
+          <form class="form-inline glpx-dropselect form-horizontal" id="fbpx-title">
             <label for="">分类1:</label>
-            <select class="form-control">
-              <option>场地</option>
-              <option>餐饮</option>
+            <select class="form-control" id="lanClass1">
+              <option value="1">场馆</option>
+              <option value="2">餐饮</option>
             </select>
             <label for="" class="ml20">分类2:</label>
-            <select class="form-control">
-              <option>欧式风格</option>
-              <option>日式风格</option>
-              <option>日式风格</option>
-              <option>日式风格4</option>
-              <option>日式风格5</option>
+            <select class="form-control" id="placeStyleLists1" name="class">
             </select>
+            <input type="button" class="btn btn-primary" value="新增分类2" data-toggle="modal" data-target="#add-style">
             <label for="" class="ml20">名称:</label>
-            <input type="text" class="form-control">
+            <input type="text" class="form-control" name="title">
+            <div class="mt20">
+              <label for="">简介:</label>
+              <textarea class="form-control" rows="4" cols="82" name="brief"></textarea>
+            </div>
           </form>
-          <form>
+          <form id="fbpx-details">
             <legend>品项详情信息</legend>
             <div class="btn-group">
               <button type="button" class="btn btn-primary btn-sm" id="fbpx-info-add"><span class="glyphicon glyphicon-plus"></span> 新增一条</button>
@@ -142,22 +129,24 @@
                   <tr>
                     <th class="col-md-1">#</th>
                     <th class="col-md-2">标题</th>
-                    <th class="col-md-6">内容</th>
-                    <th class="col-md-1">操作</th>
+                    <th class="col-md-7">内容</th>
+                    <th class="col-md-2">操作</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td class="col-md-1">
+                    <td>
                       <input type="checkbox" class="checkboxStyle" name="fbpx-info-list">
                     </td>
-                    <td class="col-md-2"><input type="text" class="form-control"></td>
-                    <td class="col-md-6"><input type="text" class="form-control"></td>
-                    <td class="col-md-1"><button type="button" class="btn btn-warning fbpx-info-delete">删除</button></td>
+                    <td><input type="text" class="form-control detailsTitle"></td>
+                    <td><input type="text" class="form-control detailsInfo"></td>
+                    <td><button type="button" class="btn btn-warning fbpx-info-delete">删除</button></td>
                   </tr>
                 </tbody>
               </table>
             </div>
+          </form>
+          <!--<form id="fbpx-photos">
             <legend class="mt20">品项相关图片</legend>
             <div class="btn-group">
               <button type="button" class="btn btn-primary btn-sm" id="fbpx-photo-add"><span class="glyphicon glyphicon-plus"></span> 新增一条</button>
@@ -168,43 +157,47 @@
                 <thead>
                   <tr>
                     <th class="col-md-1">#</th>
-                    <th class="col-md-6">图片</th>
-                    <th class="col-md-1">图片</th>
+                    <th class="col-md-7">图片</th>
                     <th class="col-md-1"></th>
-                    <th class="col-md-1">操作</th>
+                    <th class="col-md-1"></th>
+                    <th class="col-md-2">操作</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td class="col-md-1">
+                    <td>
                       <input type="checkbox" class="checkboxStyle" name="fbpx-photo-list">
                     </td>
-                    <td class="col-md-6">
+                    <td>
                       <input type="text" class="form-control fbpx-inputfile-0">
                     </td>
-                    <td class="col-md-1">
+                    <td>
                       <label class="btn btn-primary" for="fbpx-inputfile-0">选择文件</label>
                     </td>
-                    <td class="col-md-1">
+                    <td>
                       <input type="file" id="fbpx-inputfile-0" class="file" name="0">
                     </td>
-                    <td class="col-md-1"><button type="button" class="btn btn-warning fbpx-photo-delete">删除</button></td>
+                    <td><button type="button" class="btn btn-warning fbpx-photo-delete">删除</button></td>
                   </tr>
                 </tbody>
               </table>
             </div>
-            <button type="button" class="btn btn-block btn-lg btn-success fbpx-confirm" data-toggle="modal" data-target="#fbpx-success"><span class="glyphicon glyphicon-ok"></span> 确认提交品项</button>
+          </form>-->
+          <form enctype="multipart/form-data">
+            <legend class="mt20">品项相关图片</legend>
+            <div class="form-group">
+              <input id="file-1" type="file" multiple class="file" data-overwrite-initial="false" data-min-file-count="2">
+            </div>
           </form>
+
+          <button type="button" class="btn btn-block btn-lg btn-success fbpx-confirm" data-toggle="modal" data-target="#fbpx-success" id="fbpxBtn"><span class="glyphicon glyphicon-ok"></span> 确认提交品项</button>
         </div>
         <!--修改品项-->
         <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main tab-pane fade" id="xgpx">
           <h1 class="page-header">修改品项</h1>
           <form class="form-inline xgpx-dropselect form-horizontal">
             <label for="">分类1:</label>
-            <select class="form-control">
-              <option>场地</option>
-              <option>餐饮</option>
-            </select>
+            <input type="text" class="form-control" style="width:80px;" disabled>
             <label for="" class="ml20">分类2:</label>
             <select class="form-control">
               <option>欧式风格</option>
@@ -213,8 +206,13 @@
               <option>日式风格4</option>
               <option>日式风格5</option>
             </select>
+            <input type="button" class="btn btn-primary" value="新增分类2" data-toggle="modal" data-target="#add-style">
             <label for="" class="ml20">名称:</label>
             <input type="text" class="form-control">
+            <div class="mt20">
+              <label for="">简介:</label>
+              <textarea class="form-control" rows="4" cols="82"></textarea>
+            </div>
           </form>
           <form>
             <legend>品项详情信息</legend>
@@ -228,18 +226,18 @@
                   <tr>
                     <th class="col-md-1">#</th>
                     <th class="col-md-2">标题</th>
-                    <th class="col-md-6">内容</th>
-                    <th class="col-md-1">操作</th>
+                    <th class="col-md-7">内容</th>
+                    <th class="col-md-2">操作</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td class="col-md-1">
+                    <td>
                       <input type="checkbox" class="checkboxStyle" name="xgpx-info-list">
                     </td>
-                    <td class="col-md-2"><input type="text" class="form-control"></td>
-                    <td class="col-md-6"><input type="text" class="form-control"></td>
-                    <td class="col-md-1"><button type="button" class="btn btn-warning xgpx-info-delete">删除</button></td>
+                    <td><input type="text" class="form-control"></td>
+                    <td><input type="text" class="form-control"></td>
+                    <td><button type="button" class="btn btn-warning xgpx-info-delete">删除</button></td>
                   </tr>
                 </tbody>
               </table>
@@ -254,27 +252,27 @@
                 <thead>
                   <tr>
                     <th class="col-md-1">#</th>
-                    <th class="col-md-6">图片</th>
-                    <th class="col-md-1">图片</th>
+                    <th class="col-md-7">图片</th>
                     <th class="col-md-1"></th>
-                    <th class="col-md-1">操作</th>
+                    <th class="col-md-1"></th>
+                    <th class="col-md-2">操作</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td class="col-md-1">
+                    <td>
                       <input type="checkbox" class="checkboxStyle" name="xgpx-photo-list">
                     </td>
-                    <td class="col-md-6">
+                    <td>
                       <input type="text" class="form-control xgpx-inputfile-0">
                     </td>
-                    <td class="col-md-1">
+                    <td>
                       <label class="btn btn-primary" for="xgpx-inputfile-0">选择文件</label>
                     </td>
-                    <td class="col-md-1">
+                    <td>
                       <input type="file" id="xgpx-inputfile-0" class="file" name="0">
                     </td>
-                    <td class="col-md-1"><button type="button" class="btn btn-warning xgpx-photo-delete">删除</button></td>
+                    <td><button type="button" class="btn btn-warning xgpx-photo-delete">删除</button></td>
                   </tr>
                 </tbody>
               </table>
@@ -342,27 +340,27 @@
                 <thead>
                   <tr>
                     <th class="col-md-1">#</th>
-                    <th class="col-md-6">图片</th>
-                    <th class="col-md-1">图片</th>
+                    <th class="col-md-7">图片</th>
                     <th class="col-md-1"></th>
-                    <th class="col-md-1">操作</th>
+                    <th class="col-md-1"></th>
+                    <th class="col-md-2">操作</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td class="col-md-1">
+                    <td>
                       <input type="checkbox" class="checkboxStyle" name="fbzp-photo-list">
                     </td>
-                    <td class="col-md-6">
+                    <td>
                       <input type="text" class="form-control fbzp-inputfile-0">
                     </td>
-                    <td class="col-md-1">
+                    <td>
                       <label class="btn btn-primary" for="fbzp-inputfile-0">选择文件</label>
                     </td>
-                    <td class="col-md-1">
+                    <td>
                       <input type="file" id="fbzp-inputfile-0" class="file" name="0">
                     </td>
-                    <td class="col-md-1"><button type="button" class="btn btn-warning fbzp-photo-delete">删除</button></td>
+                    <td><button type="button" class="btn btn-warning fbzp-photo-delete">删除</button></td>
                   </tr>
                 </tbody>
               </table>
@@ -388,27 +386,27 @@
                 <thead>
                   <tr>
                     <th class="col-md-1">#</th>
-                    <th class="col-md-6">图片</th>
-                    <th class="col-md-1">图片</th>
+                    <th class="col-md-7">图片</th>
                     <th class="col-md-1"></th>
-                    <th class="col-md-1">操作</th>
+                    <th class="col-md-1"></th>
+                    <th class="col-md-2">操作</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr>
-                    <td class="col-md-1">
+                    <td>
                       <input type="checkbox" class="checkboxStyle" name="xgzp-photo-list">
                     </td>
-                    <td class="col-md-6">
+                    <td>
                       <input type="text" class="form-control xgzp-inputfile-0">
                     </td>
-                    <td class="col-md-1">
+                    <td>
                       <label class="btn btn-primary" for="xgzp-inputfile-0">选择文件</label>
                     </td>
-                    <td class="col-md-1">
+                    <td>
                       <input type="file" id="xgzp-inputfile-0" class="file" name="0">
                     </td>
-                    <td class="col-md-1"><button type="button" class="btn btn-warning xgzp-photo-delete">删除</button></td>
+                    <td><button type="button" class="btn btn-warning xgzp-photo-delete">删除</button></td>
                   </tr>
                 </tbody>
               </table>
@@ -420,7 +418,7 @@
     </div>
   </div>
 
-
+  <!--删除品项确认框-->
   <div class="modal fade" id="delete-px">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -439,6 +437,7 @@
     </div>
   </div>
 
+  <!--发布成功确认框-->
   <div class="modal fade" id="fbpx-success">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -451,6 +450,26 @@
         </div>
         <div class="modal-footer">
           <!--<button type="button" class="btn btn-default" data-dismiss="modal">返回</button>-->
+          <button type="button" class="btn btn-primary" data-dismiss="modal">确认</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!--新增分类2弹框-->
+  <div class="modal fade" id="add-style">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title">添加分类2</h4>
+        </div>
+        <div class="modal-body">
+          <label for="">新增分类2名称:</label>
+          <input type="text" class="form-control">
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">返回</button>
           <button type="button" class="btn btn-primary">确认</button>
         </div>
       </div>
@@ -464,6 +483,8 @@
   <script src="../js/jquery-2.0.0.min.js"></script>
   <script src="../admin/js/bootstrap.min.js"></script>
   <script src="../admin/js/admin.js"></script>
+  <script src="../admin/js/fileinput.js"></script>
+  <script src="../admin/js/fileinput_locale_zh.js"></script>
 </body>
 
 </html>
