--- a/admin/lp-admin.html
+++ b/admin/lp-admin.html
@@ -355,7 +355,7 @@
           <h1 class="page-header">修改一组照片</h1>
           <form class="form-inline xgpx-dropselect form-horizontal" id="xgzp-title">
             <label for="">名称:</label>
-            <input type="text" class="form-control" name="title" id="ablumTitle">
+            <input type="text" class="form-control" name="title" id="albumTitle">
           </form>
           <form>
             <legend class="mt20">已有图片预览</legend>
